se agregaron nuevos modulos

--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam porro facere natus quisquam dolorem quas vel optio eligendi dolor cumque adipisci est, expedita ex similique quam doloremque quae explicabo ullam.</p>
     <small>texto pequeño</small>
 
-    <img src="perrito.jpeg" alt="">
+    <br>
+    <a href="perrito.html"><strong>IR A PERRITO</strong></a>
+    <a href="perrito.html" target="_blank" rel="noopener noreferrer">IR A PERRITO</a>
+    <a href="https://www.duoc.cl/" target="_blank" rel="noopener noreferrer">IR A DUOC</a>
+    <a href="mailto:bej.mora@profesor.duoc.cl">correo</a>
+    <a href="tel:+59999999999">telefono</a>
+    <a href="https://wa.me/5699999999">whatsapp</a>
+    <br><br><br><br><br>
 
-    <img src="https://th.bing.com/th/id/R.0297800981460d170ebd448d764cbade?rik=LfhIJA5f%2fZPYEw&riu=http%3a%2f%2fk33.kn3.net%2ftaringa%2f6%2fA%2f3%2f6%2f3%2fD%2fTrolacioKun%2fE2D.jpg&ehk=juuV1zn2zyIESA1idh4LSbxN%2fxCY6ZqjdAFPmTh%2bfR4%3d&risl=&pid=ImgRaw&r=0" alt="">
+    <img src="perrito.jpeg" width="200px" alt="">
 
+    <img src="https://th.bing.com/th/id/R.0297800981460d170ebd448d764cbade?rik=LfhIJA5f%2fZPYEw&riu=http%3a%2f%2fk33.kn3.net%2ftaringa%2f6%2fA%2f3%2f6%2f3%2fD%2fTrolacioKun%2fE2D.jpg&ehk=juuV1zn2zyIESA1idh4LSbxN%2fxCY6ZqjdAFPmTh%2bfR4%3d&risl=&pid=ImgRaw&r=0" width="200px"  alt="">
+
+  
     <!-- <figure>
         <img src="pic_trulli.jpg" alt="Trulli" style="width:100%">
         <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
